Swagger configuration, enable
